--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Cubo/NFr6bKmfrFNnktQTAObRa8FUWjAlTMEBqqb+oU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,10 +8,17 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_PORT=8889
+DB_DATABASE=instapress
+DB_USERNAME=root
 DB_PASSWORD=secret
+DB_CONNECTION=mysql
+
+# DB_HOST=204.48.21.122
+# DB_PORT=3306
+# DB_DATABASE=instapress
+# DB_USERNAME=root
+# DB_PASSWORD=mighty0!!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
